# phantom_drawer_ws

./: .gitignore  .gitmodules  README.md
src/matlab_msg_gen_ros1/maci64/src/px_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/matlab_msg_gen_ros1/maci64/src/px_msgs/include/px_msgs/: visibility_control.h
src/matlab_msg_gen_ros1/maci64/src/px_msgs/m/+ros/+internal/+ros/+custommessages/+px_msgs/: gripperPoseRequest.m  gripperPoseResponse.m  homeRequest.m  homeResponse.m  ikinemRequest.m  ikinemResponse.m  moveRobotRequest.m  moveRobotResponse.m  pathRequest.m  pathResponse.m  pxConfig.m  pxConfigVector.m  pxIkinemRequest.m  pxIkinemResponse.m
src/matlab_msg_gen_ros1/maci64/src/px_msgs/m/+ros/+msggen/+px_msgs/: gripperPoseRequest.m  gripperPoseResponse.m  homeResponse.m  ikinemRequest.m  ikinemResponse.m  moveRobotRequest.m  moveRobotResponse.m  pathRequest.m  pathResponse.m  pxConfig.m  pxConfigVector.m  pxIkinemRequest.m  pxIkinemResponse.m
src/matlab_msg_gen_ros1/maci64/src/px_msgs/src/: px_msgs_gripperPose_service.cpp  px_msgs_home_service.cpp  px_msgs_ikinem_service.cpp  px_msgs_moveRobot_service.cpp  px_msgs_path_service.cpp  px_msgs_pedroPascal_message.cpp  px_msgs_pxConfigVector_message.cpp  px_msgs_pxConfig_message.cpp  px_msgs_pxIkinem_service.cpp
src/matlab_msg_gen_ros1/maci64/src/px_msgs/srv/: gripperPose.srv
src/px_controller/: CMakeLists.txt  package.xml
src/px_controller/launch/: setup.launch
src/px_controller/src/: config_sender.cpp  get_button.cpp  gripperController.cpp  gripperJoint.cpp  gui_arm.cpp  gui_arm.h  homeConfig.cpp  moveRobot.cpp  px_ikinem.cpp  px_pose_to_srv.cpp
src/px_controller/srv/: pxIkinem.srv
src/px_gui/: CMakeLists.txt  package.xml
src/px_gui/GUI/: index.html  main.js  styles.css
src/px_gui/GUI/roslib_build/: roslib.js
src/px_gui/scripts/: server.py
src/px_msgs/: CMakeLists.txt  package.xml
src/px_msgs/msg/: pedroPascal.msg  pxConfig.msg  pxConfigVector.msg
src/px_msgs/srv/: ikinem.srv  moveRobot.srv
src/px_neuron/: CMakeLists.txt  README.md  package.xml
src/px_neuron/launch/: perception.launch
src/px_neuron/src/: bvh_receiver.cpp  bvh_translator.cpp  tcp_read.cpp
src/px_neuron_msg/: CMakeLists.txt  package.xml
src/px_neuron_msg/msg/: hand_poses.msg
src/px_planner/: CMakeLists.txt  package.xml
src/px_planner/config/: config.rviz
src/px_planner/launch/: check_ikinem.launch
src/px_planner/matlab/: Letras_todas_actualizadas.mlx  trayectoria_L.mat  trayectoria_M.mat  trayectoria_N.mat  trayectoria_Z.mat  trayectoria_arcos_sin_rayita.mat  trayectoria_circulo_centro.mat  trayectoria_rectangulo_centro.mat  trayectorias.mlx  trayectorias2.mlx
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/: _setup_util.py  local_setup.sh  setup.sh
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/include/alv/: pedroPascal.h  visibility_control.h
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/include/px_msgs/: visibility_control.h
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/m/+ros/+internal/+ros/+custommessages/+alv/: pedroPascal.m
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/m/+ros/+msggen/+alv/: pedroPascal.m
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/share/alv/: package.xml
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/share/alv/cmake/: alv-msg-extras.cmake  alv-msg-paths.cmake  alvConfig.cmake
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/share/alv/msg/: pedroPascal.msg
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/share/px_msgs/: package.xml
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/share/px_msgs/cmake/: px_msgs-msg-paths.cmake  px_msgsConfig.cmake
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/install/share/px_msgs/msg/: pedroPascal.msg
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/src/px_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/px_planner/matlab/custom_msg_pedro_lab5/custom_msg_pedro_lab5/matlab_msg_gen_ros1/glnxa64/src/px_msgs/src/: px_msgs_pedroPascal_message.cpp
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/install/include/px_msgs/: pedroPascal.h  visibility_control.h
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/install/share/px_msgs/: package.xml
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/install/share/px_msgs/cmake/: px_msgs-msg-extras.cmake  px_msgsConfig.cmake
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/src/: CMakeLists.txt  VersionInfo.mat
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/src/px_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/px_planner/matlab/custom_msg_pedro_lab5/matlab_msg_gen_ros1/maci64/src/px_msgs/m/+ros/+msggen/+px_msgs/: homeRequest.m  pedroPascal.m
src/px_planner/matlab/lab5app/: AppLab5.mlapp  AppLab5.mlappinstall  AppLab5.prj
src/px_planner/src/: px_create_paths.cpp  px_ikinem.cpp  px_ikinem_calculator.cpp  px_pose_translator.cpp  px_translate_leap.cpp
src/px_planner/src/check/: markerPosition.cpp
src/px_planner/src/tools/: pkIkinem.h
src/px_robot/config/: config.rviz
src/px_robot/launch/: px_rviz.launch
src/px_robot/urdf/: px.urdf  px_collision.urdf
(+1 files in other folders)
